# vigir_lidar_proc

./: README.md
vigir_cloud_proximity_warner/: CMakeLists.txt  package.xml
vigir_cloud_proximity_warner/src/: cloud_proximity_warn_node.cpp
vigir_cloud_to_planar_scan/: CMakeLists.txt  package.xml
vigir_cloud_to_planar_scan/launch/: default.launch  periodic_aggregator.launch
vigir_cloud_to_planar_scan/src/: laserscan_to_aggregated_cloud.cpp  periodic_cloud_aggregator_node.cpp  rotating_cloud_to_aggregated_cloud_node.cpp
vigir_laserscan_to_pointcloud/: CMakeLists.txt  package.xml
vigir_laserscan_to_pointcloud/config/: argo_scan_filter.yaml
vigir_laserscan_to_pointcloud/src/: laserscan_to_pointcloud_node.cpp
vigir_lidar_intensity_modifier/: CMakeLists.txt  package.xml
vigir_lidar_intensity_modifier/src/: laser_intensity_modifier_node.cpp
vigir_lidar_proc_launch/: CMakeLists.txt  package.xml
vigir_lidar_proc_launch/config/: argo_lidar_self_filter.yaml  atlas_lidar_self_filter.yaml  thor_lidar_self_filter.yaml  tracker_lidar_self_filter.yaml
vigir_lidar_proc_launch/launch/: lidar_proc.launch  self_filter_lidar.launch
vigir_lidar_stamp_check/: CMakeLists.txt  package.xml
vigir_lidar_stamp_check/src/: stamp_check_node.cpp
