<?xml version="1.0"?>
<package>
  <name>vigir_lidar_proc_launch</name>
  <version>0.0.0</version>
  <description>The vigir_lidar_proc_launch package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>